# yaymp

./: .gitignore  README.md  pyproject.toml  raw.md  step5_todo.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: bootstrap.md  domain.md
docs/steps/: step1.md  step2.md
llm/: DELIVERY_PLAN.md  IMPLEMENTATION_STEPS.md  PROJECT_RULES.md
scripts/: build_nuitka_linux.sh  build_nuitka_macos.sh  build_nuitka_windows.ps1  build_windows_installer.ps1  run_app.sh  run_lint.sh  run_smoke.sh  run_tests.sh
src/app/: __init__.py  __main__.py
src/app/application/: auth_service.py  demo_library.py  error_presenter.py  library_service.py  playback_service.py  search_service.py  settings_service.py  track_metadata.py
src/app/bootstrap/: __init__.py  config.py  container.py  startup.py
src/app/domain/: __init__.py  audio_quality.py  auth.py  catalog.py  errors.py  playback.py  playlist.py  protocols.py  station.py  track.py
src/app/infrastructure/persistence/: __init__.py  file_artwork_cache.py  file_auth_repo.py  file_library_cache_repo.py  file_settings_repo.py  sqlite_library_cache_repo.py  sqlite_playback_state_repo.py  state_recovery.py
src/app/infrastructure/playback/: __init__.py  fake_playback_engine.py  mpv_loader.py  mpv_playback_engine.py  stream_proxy_service.py
src/app/infrastructure/yandex/: __init__.py  yandex_music_service.py
src/app/presentation/qt/: app.py  auth_dialog.py  i18n.py  icon_utils.py  library_controller.py  main_window.py  main_window_artwork.py  (+14 more)
tests/contract/: test_domain_entities.py  test_domain_protocols.py  test_file_artwork_cache.py  test_file_auth_repo.py  test_file_library_cache_repo.py  test_file_settings_repo.py  test_mpv_loader.py  test_sqlite_library_cache_repo.py  test_sqlite_playback_state_repo.py  test_state_recovery.py  test_yandex_music_service.py
tests/integration/: test_auth_service.py  test_playback_service.py  test_search_and_library_services.py  test_startup_recovery.py
tests/smoke/: test_app_smoke.py
tests/unit/: test_error_presenter.py  test_i18n.py  test_icon_utils.py  test_library_controller.py  test_main_window_artwork.py  test_main_window_browser.py  test_main_window_navigation.py  test_mpv_playback_engine.py  test_my_wave_button.py  test_preference_markers.py  test_settings_service.py  test_system_media.py
tools/: build_windows_icon.py  bundle_linux_libs.py  bundle_macos_dylibs.py  nuitka_entry.py  windows_installer.iss  windows_remote_build.cmd  windows_remote_cleanup.ps1  windows_remote_debug_launcher.cmd  windows_remote_probe.cmd  windows_remote_verify.ps1
