[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "yaymp"
version = "0.5.0"
description = "Desktop Yandex Music player bootstrap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.0.0,<2027.0.0",
    "platformdirs>=4.3,<5.0",
    "miniaudio>=1.71,<2.0",
    "python-mpv>=1.0.8,<2.0",
    "PySide6>=6.8,<7.0",
    "pyobjc-core>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-MediaPlayer>=10.3; sys_platform == 'darwin'",
    "windows-toasts>=1.3.1,<2.0; sys_platform == 'win32'",
    "winrt-runtime>=3.2.1,<4.0; sys_platform == 'win32'",
    "winrt-Windows.Foundation>=3.2.1,<4.0; sys_platform == 'win32'",
    "winrt-Windows.Media>=3.2.1,<4.0; sys_platform == 'win32'",
    "winrt-Windows.Media.Playback>=3.2.1,<4.0; sys_platform == 'win32'",
    "yandex-music>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-qt>=4.4,<5.0",
    "ruff>=0.11,<0.12",
]
packaging = [
    "imageio>=2.37,<3.0",
    "nuitka>=4.1,<5.0",
    "zstandard>=0.23,<1.0",
]

[project.scripts]
yaymp = "app.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
